# voz-crawler

./: .gitignore  pyproject.toml
notebooks/: extract-data-2.ipynb  test_crawler.ipynb
src/voz_crawler/: __init__.py  cache.py  crawler.py  exceptions.py  graph.py  parser.py
